RESOLVED FIXED300438
[WebAudio] Unified build issue in BaseAudioContext
https://bugs.webkit.org/show_bug.cgi?id=300438
Summary [WebAudio] Unified build issue in BaseAudioContext
Philippe Normand
Reported 2025-10-09 02:53:10 PDT
In file included from /var/home/phil/WebKit/local-build-gtk/WebKitBuild/GTK/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-15561f92-53.cpp:2: /var/home/phil/WebKit/Source/WebCore/Modules/webaudio/BaseAudioContext.cpp:249:67: error: incomplete type 'WebCore::Event' named in nested name specifier 249 | queueTaskToDispatchEvent(*this, TaskSource::MediaElement, Event::create(eventNames().statechangeEvent, Event::CanBubble::Yes, Event::IsCancelable::No)); | ^~~~~~~ /var/home/phil/WebKit/local-build-gtk/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/ActiveDOMObject.h:42:7: note: forward declaration of 'WebCore::Event' 42 | class Event; | ^ In file included from /var/home/phil/WebKit/local-build-gtk/WebKitBuild/GTK/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-15561f92-53.cpp:2: /var/home/phil/WebKit/Source/WebCore/Modules/webaudio/BaseAudioContext.cpp:249:112: error: incomplete type 'WebCore::Event' named in nested name specifier 249 | queueTaskToDispatchEvent(*this, TaskSource::MediaElement, Event::create(eventNames().statechangeEvent, Event::CanBubble::Yes, Event::IsCancelable::No)); | ^~~~~~~ /var/home/phil/WebKit/local-build-gtk/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/ActiveDOMObject.h:42:7: note: forward declaration of 'WebCore::Event' 42 | class Event; | ^ In file included from /var/home/phil/WebKit/local-build-gtk/WebKitBuild/GTK/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-15561f92-53.cpp:2: /var/home/phil/WebKit/Source/WebCore/Modules/webaudio/BaseAudioContext.cpp:249:135: error: incomplete type 'WebCore::Event' named in nested name specifier 249 | queueTaskToDispatchEvent(*this, TaskSource::MediaElement, Event::create(eventNames().statechangeEvent, Event::CanBubble::Yes, Event::IsCancelable::No)); | ^~~~~~~ /var/home/phil/WebKit/local-build-gtk/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/ActiveDOMObject.h:42:7: note: forward declaration of 'WebCore::Event' 42 | class Event; | ^ 3 errors generated.
Attachments
Philippe Normand
Comment 1 2025-10-09 02:59:53 PDT
EWS
Comment 2 2025-10-09 03:02:12 PDT
Committed 301259@main (5474cc286520): <https://commits.webkit.org/301259@main> Reviewed commits have been landed. Closing PR #52060 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-09 03:03:15 PDT
Note You need to log in before you can comment on or make changes to this bug.