[WebAudio] Unified build issue in BaseAudioContext https://bugs.webkit.org/show_bug.cgi?id=300438

Unreviewed, add Event.h include, required for Event::create(), Event::CanBubble and
Event::IsCancelable usage.

* Source/WebCore/Modules/webaudio/BaseAudioContext.cpp:

Canonical link: https://commits.webkit.org/301259@main